Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: time
    version: v1
  name: time-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: time
      version: v1
  template:
    metadata:
      labels:
        app: time
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - env:      
        name: time
        image: eoliveiralorente/time-v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
#        livenessProbe:
#          exec:
#            command:
#            - curl
#            - localhost:8080/q/health
#          initialDelaySeconds: 5
#          periodSeconds: 4
#          timeoutSeconds: 1
#        readinessProbe:
#          exec:
#            command:
#            - curl
#            - localhost:8080/q/health/ready
#          initialDelaySeconds: 6
#          periodSeconds: 5
#          timeoutSeconds: 1
#        securityContext:
#          privileged: false
