VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: time-gateway
#  namespace: java-cloud-native
spec:
  gateways:
  - java-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /time
    rewrite:
      uri: /time
    route:
    - destination:
        host: time
        port:
          number: 8080
